tests/cases/parser/literals/missing_value_in_tuple_lit.stderr
error: expected an expression
 --> $DIR/missing_value_in_tuple_lit.hash:5:17
4 |       // ~ERROR: expecting value assignment after type annotation
5 |       t := (name =)
  |                   ^ 
6 |   }
